# homotopy-rs

./: .envrc  .firebaserc  .gitattributes  .gitignore  1.js  235.js  CNAME  Cargo.lock.bak  Cargo.toml  LICENSE  Makefile.toml  README.md  TUTORIAL.md  clippy.toml  firebase.js  firebase.json  firestore.rules  flake.nix  gdb_printers.py  highs.js  highs.wasm  homotopy_web-parallel.js  homotopy_web-parallel_bg.wasm  homotopy_web.js  homotopy_web_bg.wasm  index-188cfe43dca93d27.js  index-188cfe43dca93d27_bg.wasm  index-19b19f515e79851c.js  index-19b19f515e79851c_bg.wasm  index-1c28a2368eef36eb.js  index-1c28a2368eef36eb_bg.wasm  index-1f1c2792ae110a64.js  index-1f1c2792ae110a64_bg.wasm  index-2009cd59a6425380.js  index-2009cd59a6425380_bg.wasm  index-2fc32c4845052e0a.js  index-2fc32c4845052e0a_bg.wasm  index-3aff95bc47260fd9.js  index-3aff95bc47260fd9_bg.wasm  index-41a302ce6b524128.js  (+109 more)
homotopy-cli/: Cargo.toml
homotopy-cli/fuzz/: Cargo.toml
homotopy-cli/fuzz/fuzz_targets/: actions.rs
homotopy-cli/src/: main.rs
homotopy-common/: Cargo.toml
homotopy-common/src/: dense.rs  graph.rs  hash.rs  idx.rs  iter.rs  lib.rs  parity.rs  timeout.rs  tree.rs  union_find.rs
homotopy-core/: Cargo.toml
homotopy-core/benches/: bench.rs  collapse.rs  contraction.rs  expansion.rs
homotopy-core/src/: antipushout.rs  attach.rs  bubble.rs  check.rs  collapse.rs  common.rs  complex.rs  contraction.rs  cubicalisation.rs  cubicalise.rs  debug.rs  diagram.rs  examples.rs  expansion.rs  factorization.rs  graph.rs  graphic2d.rs  idx.rs  label.rs  labelled.rs  layout.rs  lib.rs  manifold.rs  mesh.rs  migration.rs  monotone.rs  normalization.rs  projection.rs  rewrite.rs  scaffold.rs  serialize.rs  signature.rs  tree.rs  typecheck.rs  util.rs
homotopy-core/src/util/: rayon.rs
homotopy-core/tests/: common.rs  contraction.rs  diagram.rs  expansion.rs  factorization.rs  graph.rs  labelled.rs  layout.rs  mesh.rs  monotone.rs  rewrite.rs  scaffold.rs  serialize.rs
homotopy-core/tests/snapshots/: contraction__1-endomorphism_then_inverse.snap  contraction__1-inverse_then_endomorphism.snap  contraction__2-endomorphism_then_inverse.snap  contraction__2-inverse_then_endomorphism.snap  contraction__beads.snap  contraction__crossing.snap  contraction__endomorphism_on_weak_unit_composed_with_weak_unit.snap  contraction__inverse_scalar_unbiased.snap  contraction__scalar_biased_left.snap  contraction__scalar_biased_right.snap  contraction__scalar_inverse_unbiased.snap  contraction__stacks.snap  contraction__three_dimensional_scalar_braid_with_two_dimensional_scalar-2.snap  contraction__three_dimensional_scalar_braid_with_two_dimensional_scalar.snap  contraction__touching.snap  diagram__assoc_left.snap  diagram__assoc_right.snap  layout__associator.snap  layout__lips.snap  layout__monoid_unit.snap  layout__pants_unit.snap  layout__scalar_and_beads.snap  layout__snake.snap  mesh__associator.snap  mesh__lips.snap  mesh__pants_unit.snap  mesh__snake.snap  serialize__serialization.snap  serialize__serialize_associator.snap
homotopy-gl/: Cargo.toml
homotopy-gl/src/: array.rs  buffer.rs  frame.rs  framebuffer.rs  lib.rs  renderbuffer.rs  shader.rs  texture.rs
homotopy-gl/src/gl/: array.rs  frame.rs  texture.rs
homotopy-graphics/: Cargo.toml
homotopy-graphics/glsl/: deferred_frag.glsl  frag.glsl  wireframe_frag.glsl  wireframe_vert.glsl
homotopy-graphics/src/: clay.rs  cubicalise.rs  generators.rs  geom.rs  geometry.rs  gl.rs  graphic2d.rs  layout2d.rs  lib.rs  manim.rs  mesh.rs  parity.rs  path_util.rs  stl.rs  style.rs  subdivide.rs  subdivision.rs  svg.rs  tikz.rs
homotopy-graphics/src/clay/: buffers.rs  examples.rs  geom.rs  layout.rs  scene.rs  subdivision.rs
homotopy-graphics/src/gl/: array.rs  buffer.rs  frame.rs  framebuffer.rs  geom.rs  renderbuffer.rs  shader.rs  texture.rs
homotopy-graphics/src/subdivision/: cubical.rs  simplicial.rs
homotopy-graphics/src/svg/: geom.rs  layout.rs  render.rs  shape.rs
homotopy-graphics/tests/: layout.rs  subdivide.rs  subdivision.rs
homotopy-graphics/tests/snapshots/: layout__assoc_left.snap  layout__assoc_projected.snap  layout__assoc_right.snap  layout__scalar.snap
homotopy-model/: Cargo.toml
homotopy-model/src/: graphics.rs  history.rs  lib.rs  migration.rs  model.rs  proof.rs  serialize.rs
homotopy-model/src/model/: history.rs  migration.rs  proof.rs  serialize.rs
homotopy-model/src/proof/: generators.rs  homotopy.rs  signature.rs
homotopy-model/tests/: actions.rs
homotopy-model/tests/examples/: associator.json  braid_contraction.json  braiding_half_bubbles.json  equivalence_to_adjoint_equivalence.json  interchanges.json  merge_contract_RI.json  strictify_multiple.json  symmetric_monoidal_abelianize.json
homotopy-model/tests/snapshots/: actions__construct_associator_signature.snap  actions__construct_associator_workspace.snap  actions__construct_braid_contraction_signature.snap  actions__construct_braid_contraction_workspace.snap  actions__construct_braiding_half_bubbles_signature.snap  actions__construct_braiding_half_bubbles_workspace.snap  actions__construct_interchanges_signature.snap  actions__construct_interchanges_workspace.snap
homotopy-server/: Cargo.toml
homotopy-server/js/: index.js  package-lock.json  package.json
homotopy-server/src/: lib.rs
homotopy-web/: .gitignore  .ignore  Cargo.toml  Makefile.toml  README.md  build.sh  index.html  package-lock.json  package.json  webpack.config.js
homotopy-web/css/: styles.css
homotopy-web/glsl/: frag.glsl  vert.glsl  vert_4d.glsl
homotopy-web/src/: app.rs  buffers.rs  components.rs  graphics.rs  lib.rs  model.rs  panic.rs  path.rs  two_d.rs  worker.rs
homotopy-web/src/app/: account.rs  attach.rs  boundary.rs  debug.rs  debug_gl.rs  diagram2d.rs  diagram3d.rs  diagram4d.rs  diagram_gl.rs  diagram_svg.rs  icon.rs  image_export.rs  info.rs  keybindings.rs  panzoom.rs  tex.rs  (+12 more)
homotopy-web/static/: firebase.js  highs_expose_bindings.js  index.html  native_fs_adapter.js  styles.css
homotopy-web/tests/: action.rs  app.rs
homotopy-web/yew-functional-macro/: Cargo.toml
(+163 files in other folders)
