[package]
name = "homotopy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }
homotopy-model = { path = "../homotopy-model" }
anyhow = "1.0.72"
serde = { version = "1.0.173" }
serde_json = "1.0.103"
structopt = "0.3"
