[package]
name = "homotopy-common"
version = "0.1.0"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
repository = "https://github.com/homotopy-io/homotopy-rs"
edition = "2018"

[dependencies]
serde = { features = ["derive"], version = "1.0.130" }

[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
