[package]
name = "homotopy-core"
version = "0.1.0"
authors = ["Lukas Heidemann <lukas@heidemann.me>", "Nick Hu <me@nickhu.co.uk>", "Calin Tataru <calintat@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/homotopy-io/homotopy-rs"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies]
homotopy-common = { path = "../homotopy-common" }
anyhow = "1.0.65"
bimap = "0.6.2"
getrandom = { version = "0.2.8", features = ["js"] }
hashconsing = "1.5.1"
highway = "0.8.1"
im = { version = "15.1.0", features = ["serde"] }
log = "0.4.17"
once_cell = "1.16.0"
petgraph = "0.6.2"
pretty_assertions = "1.3.0"
serde = { features = ["derive"], version = "1.0.147" }
rmp-serde = "1.1.1"
itertools = "0.10.5"
thiserror = "1.0.37"
flate2 = "1.0.25"
serde_json = "1.0.89"
base64 = "0.13.1"
arbitrary = { version = "1.2.0", optional = true, features = ["derive"] }
good_lp = { version = "1.3.2", features = ["minilp"], default-features = false}

[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
criterion = { version = "0.4.0", features = ["html_reports"] }
insta = "1.21.2"
proptest = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.89"
test-case = "2.2.2"
base64 = "0.13.1"

[features]
default = ["safety-checks"]
safety-checks = []
fuzz = ["arbitrary", "homotopy-common/fuzz"]

[[bench]]
name = "bench"
harness = false
