[package]
name = "homotopy-core"
version = "0.1.0"
authors = ["Lukas Heidemann <lukas@heidemann.me>", "Nick Hu <me@nickhu.co.uk>", "Calin Tataru <calintat@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/homotopy-io/homotopy-rs"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies]
homotopy-common = { path = "../homotopy-common" }
anyhow = "1.0.71"
bimap = "0.6.3"
getrandom = { version = "0.2.10", features = ["js"] }
hashconsing = "1.5.1"
highway = "1.0.0"
im = { version = "15.1.0", features = ["serde"] }
tracing = "0.1.38"
once_cell = "1.18.0"
petgraph = "0.6.2"
pretty_assertions = "1.3.0"
serde = { features = ["derive"], version = "1.0.164" }
rmp-serde = "1.1.1"
itertools = "0.10.5"
thiserror = "1.0.40"
flate2 = "1.0.26"
serde_json = "1.0.97"
base64 = "0.21.2"
good_lp = { version = "1.3.2", features = ["minilp"], default-features = false}

[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.29.0"
proptest = "1.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.97"
test-case = "3.1.0"
base64 = "0.21.2"
tracing-subscriber = "0.3.17"

[features]
default = ["safety-checks"]
safety-checks = []
highs = ["good_lp/highs"]

[[bench]]
name = "bench"
harness = false
