[package]
name = "homotopy-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }

js-sys = "0.3.61"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
petgraph = "0.6.2"
ultraviolet = "0.9.1"
thiserror = "1.0.47"
yew = "0.20.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
]
