[package]
name = "homotopy-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }

js-sys = "0.3.68"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
petgraph = "0.6.4"
ultraviolet = "0.9.2"
thiserror = "1.0.61"
yew = "0.21.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
]
