[package]
name = "homotopy-graphics"
version = "0.1.0"
authors = ["Lukas Heidemann <lukas@heidemann.me>", "Nathan Corbyn <me@nathancorbyn.com>", "Calin Tataru <calintat@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/homotopy-io/homotopy-rs"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies]
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }
# TODO(@doctorn) remove if/when we switch to GL-backed 2D rendering
euclid = "0.22.9"
itertools = "0.12.1"
log = "0.4.21"
lyon_algorithms = "1.0.4"
lyon_geom = "1.0.5"
lyon_path = "1.0.5"
palette = { git = "https://github.com/Ogeon/palette", features = ["serializing"] }
paste = "1.0.15"
petgraph = "0.6.4"
serde = { features = ["derive"], version = "1.0.202" }
serde_json = "1.0.117"
thiserror = "1.0.61"
ultraviolet = "0.9.2"

[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
insta = "1.39.0"
