[package]
name = "homotopy-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1.12"}
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }
homotopy-graphics = { path = "../homotopy-graphics" }
quote = "1.0.31"
serde = { version = "1.0.171", features = ["derive"] }
syn = "2.0.26"
paste = "1.0.14"
rmp-serde = "1.1.2"
serde_json = "1.0.103"

palette = { git = "https://github.com/Ogeon/palette", features = ["serializing"] }

tracing = "0.1.38"

thiserror = "1.0.44"
obake = { version = "1.0.5", features = ["serde"] }
im = { version = "15.1.0", features = ["serde"] }
arrayvec = "0.7.4"

[dev-dependencies]
insta = "1.31.0"

[package.metadata.nix]
build = true

[features]
default = []
