[package]
name = "homotopy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", default-features = false }
http = "0.2.8"
http-body = "0.4.5"
tower-service = "0.3.2"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
