[package]
name = "homotopy-web"
description = "Web frontend for homotopy.io"
version = "0.1.2"
authors = ["Lukas Heidemann <lukas@heidemann.me>", "Nick Hu <me@nickhu.co.uk>", "Nathan Corbyn <me@nathancorbyn.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/homotopy-io/homotopy-rs"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "show_debug_panel"]
show_debug_panel = []

[dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core" }
homotopy-model = { path = "../homotopy-model" }
homotopy-graphics = { path = "../homotopy-graphics" }
homotopy-gl = { path = "../homotopy-gl" }
closure = "0.3.0"
js-sys = "0.3.59"
quote = "1.0.21"
serde = { version = "1.0.145", features = ["derive"] }
syn = "1.0.102"
paste = "1.0.9"
rmp-serde = "1.1.1"
serde_json = "1.0.85"

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
gloo = "0.8.0"
gloo-timers = "0.2.4"

wasm-logger = "0.2.0"
log = "0.4.16"
euclid = "0.22.7"
ultraviolet = "0.9.0"
lyon_path = "1.0.1"
thiserror = "1.0.37"
katex = { version = "0.4", features = ["wasm-js"], default-features = false }
html-escape = "0.2.11"
obake = { version = "1.0.4", features = ["serde"] }
good_lp = { version = "1.3.2", features = ["highs"], default-features = false}
highs = "1.2.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
im = { version = "15.1.0", features = ["serde"] }
arrayvec = "0.7.2"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-macro = "0.19.3"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.58"
features = [
  "BeforeUnloadEvent",
  "console",
  "Element",
  "DataTransfer",
  "DomRect",
  "DomTokenList",
  "Document",
  "HtmlHeadElement",
  "Window",
  "TouchEvent",
  "TouchList",
  "Touch",
  "Performance",
  "EventTarget",
  "KeyboardEvent",
  "EventListener",
]

# These crates are used for running unit tests.
[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
wasm-bindgen-test = "0.3.31"
futures = "0.3.24"
wasm-bindgen-futures = "0.4.31"
