[package]
name = "homotopy-web"
description = "Web frontend for homotopy.io"
version = "0.1.2"
authors = ["Lukas Heidemann <lukas@heidemann.me>", "Nick Hu <me@nickhu.co.uk>", "Nathan Corbyn <me@nathancorbyn.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/homotopy-io/homotopy-rs"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "show_debug_panel"]
show_debug_panel = []

[dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
homotopy-common = { path = "../homotopy-common" }
homotopy-core = { path = "../homotopy-core", features = [ "highs" ]}
homotopy-model = { path = "../homotopy-model" }
homotopy-graphics = { path = "../homotopy-graphics" }
homotopy-gl = { path = "../homotopy-gl" }
closure = "0.3.0"
js-sys = "0.3.61"
quote = "1.0.26"
serde = { version = "1.0.158", features = ["derive"] }
syn = "2.0.9"
paste = "1.0.12"
rmp-serde = "1.1.1"
serde_json = "1.0.94"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = "0.5.0"
gloo = "0.8.0"
gloo-timers = { version = "0.2.6", features = ["futures"] }
tracing-web = "0.1.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["time"] }
euclid = "0.22.8"
ultraviolet = "0.9.1"
lyon_path = "1.0.3"
thiserror = "1.0.40"
katex = { version = "0.4", features = ["wasm-js"], default-features = false }
html-escape = "0.2.13"
obake = { version = "1.0.4", features = ["serde"] }
good_lp = { version = "1.3.2", features = ["highs"], default-features = false}
highs = "1.2.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
im = { version = "15.1.0", features = ["serde"] }
arrayvec = "0.7.2"
yew = { version = "0.20.0", features = ["csr"]}
yew-macro = "0.20.0"
time = {version = "0.3.20", features = ["wasm-bindgen"] }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.61"
features = [
  "BeforeUnloadEvent",
  "console",
  "DataTransfer",
  "DomRect",
  "DomTokenList",
  "Document",
  "Element",
  "EventListener",
  "EventTarget",
  "HtmlHeadElement",
  "KeyboardEvent",
  "Location",
  "Performance",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
]

# These crates are used for running unit tests.
[dev-dependencies]
cargo-husky = { features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"], version = "1.5.0" }
wasm-bindgen-test = "0.3.34"
futures = "0.3.27"
